// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationInputField Component renders the RegistrationInputField having populated props with no errors 1`] = `
<div
  className="field"
>
  <label
    className="label"
    htmlFor="username+Username"
  >
    Username
    :
  </label>
  <div
    className="control is-child"
  >
    <input
      className="username input"
      id="username"
      name="username"
      onChange={[Function]}
      placeholder=""
      value=""
    />
  </div>
</div>
`;

exports[`RegistrationInputField Component renders the RegistrationInputField having unpopulated props with no errors 1`] = `
<div
  className="field"
>
  <label
    className="label"
    htmlFor="undefined+undefined"
  >
    :
  </label>
  <div
    className="control is-child"
  >
    <input
      className="undefined input"
    />
  </div>
</div>
`;
